--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://139.59.131.146:5432/postgres
+spring.datasource.url= jdbc:postgresql://:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.generate-ddl=true
