--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://:5432/postgres
+spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=firewall123
 spring.jpa.generate-ddl=true
